--- a/page2.html
+++ b/page2.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="style.less" class="cid-reGFeHfkkt" id="menu1-i" data-rv-view="904"><section class="menu cid-reGFeHfkkt" once="menu" id="menu1-i">
+  <link rel="stylesheet" href="style.less" class="cid-reGFeHfkkt" id="menu1-i" data-rv-view="968"><section class="menu cid-reGFeHfkkt" once="menu" id="menu1-i">
 
     
 
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header9 cid-reXfdGW5Md mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header9-t">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="header9 cid-reXfdGW5Md mbr-fullscreen" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header9-t">
 
     
 
